--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
   </head>
 
-  <body id="app">
+  <body>
 
-    {{arr}}
+    <div id="app">
+      <ul v-for="i in arr">
+        <li>This is li number {{i}}</li>
+      </ul>
+    </div>
 
-    <script src='./bundle.js'></script>
+    <script src='dist/vue-app.js'></script>
   </body>
 </html>
