--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       <ul v-for="i in arr">
         <li>This is li number {{i}}</li>
       </ul>
+
+      <p v-bind:title="message">hover over me!</p>
+      <p>{{anotherMessage}}</p>
     </div>
 
     <script src='dist/vue-app.js'></script>
