confirmed working lodash and mapped

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <body>
 
     <div id="app">
+      <h3>Array</h3>
       <ul v-for="i in arr">
+        <li>This is li number {{i}}</li>
+      </ul>
+
+      <h3>Mapped</h3>
+      <ul v-for='i in mapped'>
         <li>This is li number {{i}}</li>
       </ul>
 
