working ajax requests

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <body>
 
     <div id="vue-app">
-      <ul v-for="post in posts">
-        <li>{{ post.id }}</li>
+      <ul v-for="post in posts.cached">
+        <li>{{ post }}</li>
       </ul>
     </div>
 
