re-organized files

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
 
     <div id="vue-app">
-      <div class='container'>
-        <div class='col-md-6 offset-md-3'>
-          <post-list :posts='posts'></post-list>
+      <div class='container-fluid'>
+        <div class='row'>
+          <post-list class='col-md-6 offset-md-3 col-xs-12' :posts='posts'></post-list>
         </div>
       </div>
     </div>
