--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <div id="vue-app">
-      <div class='container-fluid'>
+      <div class='container'>
           <post-list :posts='posts'></post-list>
         </div>
       </div>
